k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigip-telemetry
  labels:
    app.kubernetes.io/name: bigip-telemetry-exporter
    app.kubernetes.io/part-of: bigip-telemetry-exporter
