k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigip-telemetry-backend
  labels:
    app.kubernetes.io/name: bigip-telemetry-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bigip-telemetry-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
